fixed search bar layout
search bar form is in single line now ... added css to ensure wide enough for input... work around for override not being able to remove first .form-group div (hidden by css now)

--- a/app/assets/stylesheets/spree/frontend/theme/_header.scss
+++ b/app/assets/stylesheets/spree/frontend/theme/_header.scss
@@ -19,9 +19,17 @@ div#spree-header {
 	box-shadow: 0 0.15em 0.35em 0 rgba(0,0,0,0.135);
 
 	header#header {
+		padding: 15px 0;
 		background: rgba(255, 255, 255, 0.6);
+		-webkit-transition: background 0.25s;
+		transition: background 0.25s;
+
+		&.fill-block {
+			background: rgba(255, 255, 255, 1);
+		}
 
 		figure#logo {
+			margin-top: -3px;
 			margin-bottom: 0;
 		}
 
@@ -47,7 +55,7 @@ div#spree-header {
 					> button, 
 					> div.btn-group > a,
 					> div.btn-group > button {
-						-webkit-transition: color 1s;
+						-webkit-transition: color 0.25s;
 						transition: color 0.25s;
 						text-transform: uppercase;
 						color: $text-color;
@@ -58,7 +66,7 @@ div#spree-header {
 					}
 
 					ul.dropdown-menu {
-						top: 52px;
+						top: 47px;
 						border-radius: 0;
 						color: $text-color;
 
@@ -148,6 +156,41 @@ div#spree-header {
 
 									span.glyphicon-remove {
 										display: block;
+									}
+								}
+							}
+						}
+					}
+
+					li#search-bar {
+						ul.dropdown-menu {
+							li {
+								form.navbar-form {
+									div.form-group:first-of-type {
+										display: none;
+									}
+
+									div.input-group{
+										span.input-group-addon:first-child {
+											padding: 0;
+											border-radius: 0;
+
+											select#taxon {
+												border: 0;
+												border-radius: 0;
+												height: 100%;
+											}
+										}
+
+										input[type="search"] {
+											min-width: 200px;
+										}
+
+										span.input-group-btn:last-child {
+											input[type="submit"] {
+												border-radius: 0;
+											}
+										}
 									}
 								}
 							}
